# sygame

sygame/: SyGame9.sln  游戏方案.docx
sygame/PackTool/: PackTool.aps  PackTool.cpp  PackTool.h  PackTool.rc  PackTool.vcproj  PackToolDlg.cpp  PackToolDlg.h  PngPack.cpp  PngPack.h  ReadMe.txt  resource.h  serialize.cpp  serialize.h  stdafx.cpp  stdafx.h
sygame/PinTu/: AppDelegate.cpp  PinTu.vcproj  StartDialog.cpp  StartDialog.h  StartScene.cpp  StartScene.h  UICenterBag.cpp  UICenterBag.h  main.cpp
sygame/SyClient/: AppDelegate.cpp  StartDialog.cpp  StartDialog.h  StartScene.cpp  StartScene.h  SyClient.vcproj  UICenterBag.cpp  UICenterBag.h  main.cpp
sygame/SyServer/: Server.vcproj  SyServer.vcproj  aboutnode.cpp  aboutnode.h  main.cpp  server.bw  servernetlib.cpp  servernetlib.h
sygame/netcom/: AboutData.h  AboutRequest.cpp  AboutRequest.h  AboutRequest_C.cpp  AboutRequest_S.cpp  ReadMe.txt  netcom.vcproj
sygame/network/: CMakeLists.txt  ReadMe.txt  calctime.h  clientsocket.cpp  clientsocket.h  cmd_serialize.h  cmdobject.h  connection.cpp  connection.h  dealcmddelegate.h  des.cpp  des.h  des1.cpp  des1.h  epollpool.cpp  epollpool.h  iocppool.cpp  iocppool.h  kqueuepool.cpp  kqueuepool.h  libtag.h  mcenter.cpp  mcenter.h  memorymamanger.cpp  memorymanager.h  memorynode.cpp  memorynode.h  messagequeue.cpp  messagequeue.h  net.h  netcommon.h  netlib.cpp  netlib.h  network.vcproj  nocopy.h  node.cpp  node.h  nodecenter.cpp  nodecenter.h  nullcommand.h  (+25 more)
sygame/proj.android/: .project  build_native.sh  project.properties
sygame/proj.ios/: SyClient-Info.plist
(+222 files in other folders)
